Bug 496693 - NJ: comment and refactor DeadCodeFilter vs Assembler::gen interactions, r=edwsmith.

--HG--
extra : rebase_source : e675f824946d4a8bb83b2aed8ff1911c8b23caee